--- a/body/sections/analyses.html
+++ b/body/sections/analyses.html
@@ -14,7 +14,7 @@
                                 <h3>Open Notebook</h3>
                             </div>
                         </div>
-                        <img class="img-fluid" src="assets/img/analyses/bc-service/logo.jpg" alt="" />
+                        <img class="img-fluid" src="assets/img/analyses/bc-service/logo.png" alt="" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">BC Service</div>
